<resources>
    <string name="app_name">Proiect Android</string>
    <string name="text_prima_pg">Utilizati camera</string>
    <string name="buton_prima_pg">Camera</string>
    <string name="text2_prima_pg">Mergeti la RecyclerView</string>
    <string name="buton2_prima_pg">RecyclerView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="imagine_camera">Imagine</string>
    <string name="buton_camera">Captureaza imagine</string>
    <string name="buton_galerie">Salveaza in galerie</string>
    <string name="buton_share">Share text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutTitlu">Despre aplicatie</string>
    <string name="about">Aceasta aplicatie realizeaza o fotografie in fragmentul "Camera" si o incarca in text view-ul din layout. Textul about se poate share-ui. Mai contine un RecyclerView cu titluri de stiri, cu functie de cautare.</string>
    <string name="home">Acasa</string>
    <string name="recycler">RecyclerView</string>
    <string name="video">Video</string>

</resources>