<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Camera">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/imagine_camera"
            android:layout_width="370dp"
            android:layout_height="456dp"
            android:contentDescription="@string/imagine_camera"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/button_pg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buton_camera"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagine_camera"
            app:layout_constraintVertical_bias="0.337" />

        <Button
            android:id="@+id/button2_pg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buton_galerie"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_pg_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>